--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,9 @@
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.7",
     "validator": "^13.12.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
